# Translator-ULTRA

./: .gitignore.example  README.md  pyproject.toml  pytest.ini
alembic/: README.md  env.py
alembic/versions/: 2025_08_27_2305-811884aac289_.py  2025_08_31_1712-1b70a5eb6f26_.py  2025_08_31_2001-c83a59af8eaf_.py  2025_09_01_2210-9baa0d662a7c_.py  keep
app/: __init__.py  main.py
app/api/: __init__.py  routs.py  routs_code.py  schemas.py  tasks.py
app/api/routs_logic/: __init__.py  generate_user_id.py  show_history.py  translator.py  translator_utils.py
app/core/: __init__.py  abstract.py  lifespan.py
app/core/infrastructure/: __init__.py  cache_config.py  queue_config.py
app/core/infrastructure/db/: __init__.py  config.py  models.py
app/infrastructure/: __init__.py  cache_config.py  cache_queue_config.py  factories.py  queue_config.py
app/infrastructure/db/: __init__.py  models.py
app/utils/: __init__.py  logger_config.py
tests/: conftest.py  test_background_tasks.py  test_cache.py  test_generating_id.py  test_pure_translator.py  test_showing_history.py
tests/redis_tests/: test_background_tasks.py  test_cache.py  test_redis_integration.py
